--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+install
+log
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
